# PJATK

GRK/LAB_1/: Zadanie_1_pixels.js  Zadanie_2_gradient.js  Zadanie_3_gradients.js  Zadanie_4_picture.js  Zadanie_5_fractals.js
GRK/LAB_2/: Zadanie_1_RGB.js  Zadanie_2_3_4_HSV.js  Zadanie_5_histogram.js
GRK/LAB_3/: Zadanie_1.js  Zadanie_2.js  Zadanie_3.js  Zadanie_4.js
GUI/: AddContact.java  AppHome.java  ContactList.java  CreateEmail.java  EmailService.java  Main.java
PJC/: CMakeLists.txt  GameplayScene.cpp  GameplayScene.h  LeaderBoardScene.cpp  LeaderBoardScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.h  main.cpp  score.txt
PJC/UTP/LAB_1/src/zad2/: ListCreator.java
PJC/UTP/LAB_1/src/zad3/: ListCreator.java  Main.java
PJC/UTP/LAB_2/src/zad1/: InputConverter.java  Main.java
PJC/UTP/LAB_2/src/zad2/: Maybe.java
PJC/UTP/LAB_3/src/zad1/: Main.java  XList.java
PJC/UTP/LAB_3/src/zad2/: Futil.java
PJC/UTP/LAB_3/src/zad3/: Finder.java  Main.java
PJC/assets/dictionaries/: words_advanced.txt  words_basic.txt  words_medium.txt
SKJ/PROJ_1/: DAS.java
SKJ/PROJ_2/: CCS.java
UTP/LAB_1/src/zad1/: Main.java
UTP/LAB_1/src/zad2/: Main.java
UTP/LAB_1/src/zad3/: Mapper.java  Selector.java
UTP/LAB_2/src/zad2/: Main.java
UTP/LAB_3/src/zad2/: Main.java
UTP/LAB_4/src/zad1/: Anagrams.java  Main.java
UTP/LAB_4/src/zad2/: CustomersPurchaseSortFind.java  Main.java  Purchase.java
UTP/LAB_4/src/zad3/: Main.java  ProgLang.java
